# nhf

./: .gitignore  CMakeLists.txt  README.md
nhfint/nhfint/: CMakeLists.txt
nhfint/nhfint/include/nhfint/: angmom_cart.hpp  angmom_sphl.hpp  basis.hpp  basisfile.hpp  calc_int1e_nucl_cart.hpp  calc_int1e_ovlp_cart.hpp  calc_int2e_block_hgp.hpp  calc_int2e_block_tho.hpp  calc_int2e_class_dkr.hpp  calc_int2e_class_hgp.hpp  calc_int2e_class_tho.hpp  calc_int2e_repl_cart.hpp  controller.hpp  int1e_class_cart.hpp  int1e_tensor.hpp  int2e_class_cart.hpp  int2e_tensor.hpp  utility.hpp
nhfint/nhfint/src/: angmom_cart.cpp  basis.cpp  basisfile.cpp  calc_int1e_kine_cart.cpp  calc_int1e_nucl_cart.cpp  calc_int1e_ovlp_cart.cpp  calc_int2e_class_cart_d0_dkr.cpp  calc_int2e_class_cart_d0_hgp.cpp  calc_int2e_class_cart_d0_tho.cpp  calc_int2e_class_cart_d1_dkr.cpp  calc_int2e_class_cart_d1_hgp.cpp  calc_int2e_class_cart_d1_mdx.cpp  calc_int2e_class_cart_d1_tho.cpp  calc_int2e_class_cart_d2_dkr.cpp  calc_int2e_class_cart_d2_hgp.cpp  calc_int2e_class_cart_d2_mdx.cpp  calc_int2e_repl_cart_d0.cpp  int1e_class_cart_d0.cpp  int1e_class_cart_d1.cpp  int1e_class_cart_d2.cpp  int1e_tensor_d0.cpp  int1e_tensor_d1.cpp  int1e_tensor_d2.cpp  int2e_class_cart_d0.cpp  int2e_class_cart_d1.cpp  int2e_class_cart_d2.cpp  int2e_tensor_d0.cpp  int2e_tensor_d1.cpp  utility.cpp
nhfint/nhfint/src/autocode/: CMakeLists.txt
nhfint/nhfint/src/autocode/code_gen/: CMakeLists.txt
nhfint/nhfint/src/autocode/code_gen/cg_base/: CMakeLists.txt
nhfint/nhfint/src/autocode/code_gen/cg_base/include/cg_base/: hash.hpp  ijk.hpp  ijkm.hpp  ijkpair.hpp  ijkpairm.hpp  iterm.hpp  utility.hpp
nhfint/nhfint/src/autocode/code_gen/cg_base/src/: ijk.cpp  ijkpair.cpp  ijkpairm.cpp  iterm.cpp  utility.cpp
nhfint/nhfint/src/autocode/code_gen/cg_base/test/: CMakeLists.txt  test_ijk.cpp  test_ijkpair.cpp
nhfint/nhfint/src/autocode/code_gen/cg_hgp/: CMakeLists.txt
nhfint/nhfint/src/autocode/code_gen/cg_hgp/cg_hgp_hrr/: CMakeLists.txt  cg_hgp_hrr_code_gen.cpp  cg_hgp_hrr_path_gen.cpp
nhfint/nhfint/src/autocode/code_gen/cg_hgp/cg_hgp_hrr/code/: hgp_hrr_1_0.cpp  hgp_hrr_1_1.cpp  hgp_hrr_2_0.cpp  hgp_hrr_2_2.cpp  hgp_hrr_3_1.cpp  hgp_hrr_3_2.cpp  hgp_hrr_3_3.cpp  hgp_hrr_4_0.cpp  hgp_hrr_4_2.cpp  hgp_hrr_4_3.cpp  hgp_hrr_5_1.cpp  hgp_hrr_5_5.cpp  hgp_hrr_6_0.cpp  hgp_hrr_6_3.cpp  hgp_hrr_6_5.cpp  hgp_hrr_7_0.cpp  hgp_hrr_7_1.cpp  hgp_hrr_7_2.cpp  hgp_hrr_7_4.cpp  hgp_hrr_7_5.cpp  hgp_hrr_7_6.cpp  hgp_hrr_7_7.cpp  hgp_hrr_8_3.cpp  hgp_hrr_8_6.cpp
nhfint/nhfint/src/autocode/code_gen/cg_hgp/cg_hgp_hrr/path/: hgp_hrr_path_0_0_1.txt  hgp_hrr_path_1_0_3.txt  hgp_hrr_path_1_1_18.txt  hgp_hrr_path_2_0_6.txt  hgp_hrr_path_2_1_34.txt  hgp_hrr_path_2_2_106.txt  hgp_hrr_path_3_0_10.txt  hgp_hrr_path_3_1_55.txt  hgp_hrr_path_3_2_169.txt  hgp_hrr_path_3_3_402.txt  hgp_hrr_path_4_0_15.txt  hgp_hrr_path_4_1_81.txt  hgp_hrr_path_4_2_248.txt  hgp_hrr_path_4_3_584.txt  hgp_hrr_path_4_4_1207.txt  hgp_hrr_path_4_4_1216.txt  hgp_hrr_path_5_0_21.txt  hgp_hrr_path_5_1_112.txt  hgp_hrr_path_5_2_342.txt  hgp_hrr_path_5_3_802.txt  hgp_hrr_path_5_4_1645.txt  hgp_hrr_path_5_5_3044.txt  hgp_hrr_path_6_0_28.txt  hgp_hrr_path_6_1_148.txt  hgp_hrr_path_6_2_452.txt  hgp_hrr_path_6_3_1054.txt  hgp_hrr_path_6_4_2138.txt  hgp_hrr_path_6_5_3957.txt  hgp_hrr_path_6_6_6769.txt  hgp_hrr_path_6_6_6896.txt  hgp_hrr_path_7_0_36.txt  hgp_hrr_path_7_1_189.txt  hgp_hrr_path_7_2_576.txt  hgp_hrr_path_7_3_1337.txt  (+13 more)
nhfint/nhfint/src/autocode/code_gen/cg_hgp/cg_hgp_vrr/: CMakeLists.txt  cg_hgp_vrr_path_gen.cpp
nhfint/nhfint/src/autocode/code_gen/verify/: CMakeLists.txt
nhfint/nhfint/src/autocode/code_gen/verify/dkr_iterm_need/: CMakeLists.txt  README.md  dkr_iterm_need.cpp
nhfint/nhfint/src/autocode/code_gen/verify/mdx_eijt_rijk_need/: README.md  eijt_rijk_need  eijt_rijk_need.cpp  eijt_rijk_need.txt
nhfint/nhfint/src/autocode/hgp/: CMakeLists.txt
nhfint/nhfint/src/autocode/hgp/include/hgp/: hgp_hrr.hpp
nhfint/nhfint/src/autocode/hgp/src/: hgp_hrr_0_0.cpp  hgp_hrr_2_1.cpp  hgp_hrr_3_0.cpp  hgp_hrr_4_1.cpp  hgp_hrr_4_4.cpp  hgp_hrr_5_0.cpp  hgp_hrr_5_2.cpp  hgp_hrr_5_3.cpp  hgp_hrr_5_4.cpp  hgp_hrr_6_1.cpp  hgp_hrr_6_2.cpp  hgp_hrr_6_4.cpp  hgp_hrr_6_6.cpp  hgp_hrr_7_3.cpp  hgp_hrr_8_0.cpp  hgp_hrr_8_1.cpp  hgp_hrr_8_2.cpp  hgp_hrr_8_4.cpp  hgp_hrr_8_5.cpp  hgp_hrr_8_7.cpp  hgp_hrr_8_8.cpp  hgp_vrr_e00.cpp
nhfint/nhfint/src/boysfun/: CMakeLists.txt
nhfint/nhfint/src/boysfun/data_gen/: boysfun.m  boysfun_value_in_code.m  boysfun_value_in_test.m  inverse_factorial.m  large_x_asym_coeff.m
nhfint/nhfint/src/boysfun/include/boysfun/: boysfun.hpp
nhfint/nhfint/src/boysfun/src/: boysfun.cpp
nhfint/nhfint/src/boysfun/test/: CMakeLists.txt  bench_boysfun.cpp  test_boysfun.cpp
nhfint/nhfint/src/ryspoly/: CMakeLists.txt
nhfint/nhfint/src/ryspoly/include/ryspoly/: roots_weights.hpp
nhfint/nhfint/src/ryspoly/src/: roots_weights.cpp
nhfint/nhfint/test/: CMakeLists.txt  test_angmom_cart.cpp  test_basis.cpp  test_basisfile.cpp  test_calc_ericlass_d0_cart_dkr.cpp  test_calc_ericlass_d0_cart_tho.cpp  test_utility.cpp
nhfint/nhfint/test/test_data_basisfile/: mini.bs
nhfmath/test/: CMakeLists.txt  test_mathfun.cpp  test_matrix.cpp  test_vec3d.cpp
(+25 files in other folders)
